syntax = "proto3";
option csharp_namespace = "Slate.Networking.External.Protocol";

service AuthorizationService {
	rpc Authorize(AuthorizeRequest) returns (AuthorizeReply) {}
}

message AuthorizeRequest { }

message AuthorizeReply {
	bool WasSuccessful = 1;
	string ErrorMessage = 2;
}
